# ETL-Homework

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  pyproject.toml  pytest.ini
.github/workflows/: py-tests.yml
etl_homework/: __main__.py  constants.py  crawler.py  dbs.py  exporters.py  flows.py  models.py  transformers.py
etl_homework/handy/: cold_start.py  export_to_local_dir.py  send_test_email.py
etl_homework/migrations/: initial_data.py
etl_homework/serve/: __main__.py
etl_homework/utils/: time.py
scripts/: pre-commit.example
tests/: conftest.py
tests/functional/: conftest.py  test_crawler.py  test_flows.py  test_helloworld.py
tests/unittest/: conftest.py  test_crawler.py  test_exporters.py  test_helloworld.py  test_models.py  test_transformers.py
